Refactor to remove deps on Jython and RxTx